--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,11 @@
     <string name="bad_internet_connection_toast">Bad internet connection</string>
     <string name="exchange_amount_is_zero_or_less_toast">Exchange amount must be greater than zero</string>
     <string name="transactions_up_to_free_commission_toast">Transactions up to free commission</string>
+    <string name="starting_bonus_toast">Welcome, 1000 EUR has been credited to your balance</string>
 
 
     <string name="time_last_synchronization_label">Time last synchronization</string>
+    <string name="failed_to_get_current_balance_label">Failed to get current balance</string>
     <string name="commission_label">Commission</string>
     <string name="loading_label">Loading</string>
     <string name="error_label">Error</string>
@@ -24,4 +26,5 @@
     <string name="button_text_submit">SUBMIT</string>
     <string name="button_text_show_more">SHOW MORE</string>
     <string name="button_text_show_less">SHOW LESS</string>
+    <string name="button_text_try_refresh">TRY REFRESH</string>
 </resources>
